--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "SpringZoo",
+  "name": "acrm",
   "description": "Minimal Agency Customer Relationship Management Demo API",
   "website": "https://andreasmartin.ch",
   "addons": [ "heroku-postgresql" ]
